--- a/extract_clip/extract.ipynb
+++ b/extract_clip/extract.ipynb
@@ -2,29 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/petrelfs/likunchang/.conda/envs/video/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import clip.clip as clip\n",
+    "import clip\n",
     "import torch\n",
     "from collections import OrderedDict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 335M/335M [00:06<00:00, 53.1MiB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "model, _ = clip.load(\"ViT-B/16\", device='cpu')\n",
     "new_state_dict = OrderedDict()\n",
@@ -37,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 890M/890M [00:30<00:00, 30.8MiB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "model, _ = clip.load(\"ViT-L/14\", device='cpu')\n",
     "new_state_dict = OrderedDict()\n",
@@ -52,9 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 891M/891M [00:27<00:00, 33.5MiB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "model, _ = clip.load(\"ViT-L/14@336px\", device='cpu')\n",
     "new_state_dict = OrderedDict()\n",
@@ -68,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 64-bit ('video')",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -82,14 +97,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.12"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "541191e2b003f5dcae666b7cf47a8ce9f0862214fd45822d42fd05cca313f34a"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
